SET(FMOD_CORE_BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Binaries)
SET(FMOD_CORE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Include)

ADD_LIBRARY(fmod-core SHARED IMPORTED)

SET_TARGET_PROPERTIES(fmod-core PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${FMOD_CORE_INCLUDE_DIR})

if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    SET_TARGET_PROPERTIES(fmod-core PROPERTIES IMPORTED_LOCATION ${FMOD_CORE_BIN_DIR}/Windows/fmod.dll)
    SET_TARGET_PROPERTIES(fmod-core PROPERTIES IMPORTED_IMPLIB ${FMOD_CORE_BIN_DIR}/Windows/fmod_vc.lib)
elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    SET_TARGET_PROPERTIES(fmod-core PROPERTIES IMPORTED_LOCATION ${FMOD_CORE_BIN_DIR}/Linux/libfmod.so)
elseif(CMAKE_SYSTEM_NAME STREQUAL "MacOS")
    MESSAGE(SEND_ERROR "FMOD Core not yet available for MacOS")
else ()
    MESSAGE(SEND_ERROR "FMOD Core not yet available for this platform")
endif ()