set(FMOD_CORE_BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Binaries)
set(FMOD_CORE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Include)

add_library(fmod-core SHARED IMPORTED GLOBAL)
target_include_directories(fmod-core INTERFACE ${FMOD_CORE_INCLUDE_DIR})

if(WIN32)
    set_target_properties(fmod-core PROPERTIES IMPORTED_LOCATION ${FMOD_CORE_BIN_DIR}/Windows/fmod.dll)
    set_target_properties(fmod-core PROPERTIES IMPORTED_IMPLIB ${FMOD_CORE_BIN_DIR}/Windows/fmod_vc.lib)
elseif (UNIX AND NOT APPLE)
    set_target_properties(fmod-core PROPERTIES IMPORTED_LOCATION ${FMOD_CORE_BIN_DIR}/Linux/libfmod.so)
elseif(APPLE)
    message(SEND_ERROR "FMOD Core not yet available for MacOS")
else ()
    message(SEND_ERROR "FMOD Core not yet available for this platform")
endif ()