SET(FMOD_STUDIO_BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Binaries)
SET(FMOD_STUDIO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Include)

ADD_LIBRARY(fmod-studio SHARED IMPORTED)

SET_TARGET_PROPERTIES(fmod-studio PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${FMOD_STUDIO_INCLUDE_DIR})

if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    SET_TARGET_PROPERTIES(fmod-studio PROPERTIES IMPORTED_LOCATION ${FMOD_STUDIO_BIN_DIR}/Windows/fmodstudio.dll)
    SET_TARGET_PROPERTIES(fmod-studio PROPERTIES IMPORTED_IMPLIB ${FMOD_STUDIO_BIN_DIR}/Windows/fmodstudio_vc.lib)
elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    SET_TARGET_PROPERTIES(fmod-studio PROPERTIES IMPORTED_LOCATION ${FMOD_STUDIO_BIN_DIR}/Linux/libfmodstudio.so)
elseif(CMAKE_SYSTEM_NAME STREQUAL "MacOS")
    MESSAGE(SEND_ERROR "FMOD Studio not yet available for MacOS")
else ()
    MESSAGE(SEND_ERROR "FMOD Studio not yet available for this platform")
endif ()